# automated-market-maker

./: .pnp.cjs  Anchor.toml  README.md  package.json
programs/automated-market-maker/: Cargo.toml
programs/automated-market-maker/src/: lib.rs
programs/automated-market-maker/src/instructions/: deposit.rs  initialize.rs  initialize_config.rs  initialize_vaults.rs  mod.rs  swap.rs  update.rs  withdraw.rs
programs/automated-market-maker/src/state/: config.rs
tests/: accounts.ts  constants.ts  pda.ts  setup.ts
tests/functional/: deposit.test.ts  initialize.test.ts  swap.test.ts  update.test.ts  updateConfig.test.ts  withdraw.test.ts
