[package]
name = "automated-market-maker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automated_market_maker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
